# DnD

./: .flake8  .gitignore  config.ini  pyproject.toml  readme.md
configs/: config.ini  log_config.json
src/DnD/: cli.py  config.py  consts.py  formatters.py  main.py  parsers.py  utils.py
